--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -61,5 +61,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.11.10
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "todo-list-api"
+          heroku_app_name: "todo-list-api-ronaldo"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
